@@ -24,6 +24,9 @@ List<String> runArgs = [
         "--add-exports", "javafx.graphics/com.sun.javafx.scene=com.jfoenix",
         "--add-opens", "com.google.gson/com.google.gson.internal=io.sentry",
         "--add-opens", "java.base/java.lang.reflect=com.jfoenix",
+        "--add-opens", "com.crschnick.pdx_unlimiter.core/com.crschnick.pdx_unlimiter.core.savegame=com.fasterxml.jackson.databind",
+        "--add-opens", "com.crschnick.pdx_unlimiter.core/com.crschnick.pdx_unlimiter.core.data=com.fasterxml.jackson.databind",
+        "--add-opens", "com.crschnick.pdx_unlimiter.core/com.crschnick.pdx_unlimiter.core.data=com.fasterxml.jackson.databind",
         "-Xmx4g"]
 
 application {
